# lumo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LUMO.md  LUMO_V2_DESIGN_PROMPT.md  README.md  build.sh  llm_feedback.csv  llm_native_language_design.md  llm_optimization_spec.md  test.lumo
.claude/skills/lumo-language/: SKILL.md
.claude/skills/lumo-proof/: SKILL.md
.cursor/rules/: lumo-proof.mdc  lumo-syntax.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: lumo-files.instructions.md  lumo-proof.instructions.md
.github/workflows/: ci.yml
docs/: grammar.ebnf  language-reference.md  proof-protocol.md  proof-schema.json
examples/: arithmetic.lumo  dijkstra.lumo  fizzbuzz.lumo  fizzbuzz.lumo.proof.json  functions.lumo  grades.lumo  grades.lumo.proof.json  hello.lumo  hello.lumo.proof.json  igor.lumo  loop.lumo  stdlib.lumo
include/: ast.h  ast_hasher.h  ast_printer.h  interpreter.h  lexer.h  parser.h  pattern_checker.h  proof_manifest.h  proof_verifier.h  static_analyzer.h
src/: ast.cpp  ast_hasher.cpp  ast_printer.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  pattern_checker.cpp  proof_manifest.cpp  proof_verifier.cpp  static_analyzer.cpp
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/icons/: lumo-theme.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: lumo.tmLanguage.json
